@@ -2,7 +2,6 @@
 using System.Diagnostics;
 using System.Diagnostics.Metrics;
 using System.Text;
-using System.Text.RegularExpressions;
 
 namespace Prometheus;
 
@@ -220,16 +219,12 @@ public sealed class MeterAdapter : IDisposable
     // Immortal set, we assume we do not get an infinite mix of tag names.
     private static readonly ConcurrentDictionary<string, string> _tagPrometheusNames = new();
 
-    private static readonly Regex NameRegex = new Regex("^[a-zA-Z_][a-zA-Z0-9_]*$", RegexOptions.Compiled);
-    private const string FirstCharacterCharset = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_";
-    private const string NonFirstCharacterCharset = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_0123456789";
-
     private static string TranslateInstrumentNameToPrometheusName(Instrument instrument)
     {
         // Example input: meter "Foo.Bar.Baz" with instrument "walla-walla"
         // Example output: foo_bar_baz_walla_walla
 
-        return TranslateNameToPrometheusName($"{instrument.Meter.Name}_{instrument.Name}");
+        return PrometheusNameHelpers.TranslateNameToPrometheusName($"{instrument.Meter.Name}_{instrument.Name}");
     }
 
     private static string TranslateTagNameToPrometheusName(string tagName)
@@ -237,50 +232,7 @@ public sealed class MeterAdapter : IDisposable
         // Example input: hello-there
         // Example output: hello_there
 
-        return TranslateNameToPrometheusName(tagName);
-    }
-
-    private static string TranslateNameToPrometheusName(string inputName)
-    {
-        // Transformations done:
-        // * all lowercase
-        // * special characters to underscore
-        // * must match: [a-zA-Z_][a-zA-Z0-9_]*
-        //   * colon is "permitted" by spec but reserved for recording rules
-
-        var sb = new StringBuilder();
-
-        foreach (char inputCharacter in inputName)
-        {
-            // All lowercase.
-            var c = Char.ToLowerInvariant(inputCharacter);
-
-            if (sb.Length == 0)
-            {
-                // If first character is not from allowed charset, prefix it with underscore to minimize first character data loss.
-                if (!FirstCharacterCharset.Contains(c))
-                    sb.Append('_');
-
-                sb.Append(c);
-            }
-            else
-            {
-                // Standard rules.
-                // If character is not permitted, replace with underscore. Simple as that!
-                if (!NonFirstCharacterCharset.Contains(c))
-                    sb.Append('_');
-                else
-                    sb.Append(c);
-            }
-        }
-
-        var name = sb.ToString();
-
-        // Sanity check.
-        if (!NameRegex.IsMatch(name))
-            throw new Exception("Self-check failed: generated name did not match our own naming rules.");
-
-        return name;
+        return PrometheusNameHelpers.TranslateNameToPrometheusName(tagName);
     }
 
     private static string TranslateInstrumentDescriptionToPrometheusHelp(Instrument instrument)
